# Legacy-ops

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  baseline.py  demo.py  env.py  grader.py  inference.py  openenv.yaml  precheck.py  pyproject.toml  requirements.txt  smoke_test.py  task.py
assets/: campaign_config.json  sample_config.json
server/: app.py
src/: client.py  environment.py  grader.py  interface.py  models.py  task.py  tasks.py  utils.py
tests/: test_environment.py  test_grader.py
